Changed replay to history and showing 10 flights

--- a/flightaware_demo/web/index.html
+++ b/flightaware_demo/web/index.html
@@ -578,6 +578,7 @@
             <div class="nav-links">
                 <a href="index.html" class="active">Flight List</a>
                 <a href="index-maps.html">Flight Map</a>
+                <a href="index-replay.html">Replay</a>
             </div>
             <div class="status">
                 <div>
