--- a/flightaware_demo/web/index-maps.html
+++ b/flightaware_demo/web/index-maps.html
@@ -663,6 +663,7 @@
             <div class="nav-links">
                 <a href="index.html">Flight List</a>
                 <a href="index-maps.html" class="active">Flight Map</a>
+                <a href="index-replay.html">Replay</a>
             </div>
             <div class="status">
                 <div>
