--- a/flightaware_demo/web/index.html
+++ b/flightaware_demo/web/index.html
@@ -573,12 +573,11 @@
         <div class="header">
             <div>
                 <h1>✈️ Flight List</h1>
-                <div class="timestamp" id="lastUpdate">Waiting for data...</div>
             </div>
             <div class="nav-links">
                 <a href="index.html" class="active">Flight List</a>
                 <a href="index-maps.html">Flight Map</a>
-                <a href="index-replay.html">Replay</a>
+                <a href="index-replay.html">History</a>
             </div>
             <div class="status">
                 <div>
@@ -910,13 +909,6 @@
             // Update stats
             document.getElementById('activeFlights').textContent = stats.active || 0;
             document.getElementById('totalFlights').textContent = stats.total || 0;
-            
-            // Update timestamp
-            const timestamp = document.getElementById('lastUpdate');
-            if (stats.timestamp) {
-                const date = new Date(stats.timestamp);
-                timestamp.textContent = `Last update: ${date.toLocaleTimeString()}`;
-            }
             
             // Clear container
             container.innerHTML = '';
